--- a/locator-service/locator-rest-service/pom.xml
+++ b/locator-service/locator-rest-service/pom.xml
@@ -93,6 +93,9 @@
                     <scanPaths>
                         <scanPath>org.talend.esb.locator.service.rest</scanPath>
                     </scanPaths>
+                    <excludeArtifacts>
+                        <excludeArtifact>.*</excludeArtifact>
+                    </excludeArtifacts>
                 </configuration>
             </plugin>
         </plugins>
