--- a/talend-sapjco3-connector/pom.xml
+++ b/talend-sapjco3-connector/pom.xml
@@ -18,6 +18,11 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
+    <properties>
+        <!-- as current version is a release and not snapshot, we avoid deployment -->
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
