--- a/examples/camel/pom.xml
+++ b/examples/camel/pom.xml
@@ -20,6 +20,8 @@
     </parent>
 
     <properties>
+        <!-- as current version is a release and not snapshot, we avoid deployment -->
+        <maven.deploy.skip>true</maven.deploy.skip>
         <jsr311.api.version>1.1.1</jsr311.api.version>
         <jsr250.api.version>1.0</jsr250.api.version>
         <felix.version>1.2.0</felix.version>
