--- a/examples/cxf/dev-guide-java-first/pom.xml
+++ b/examples/cxf/dev-guide-java-first/pom.xml
@@ -21,6 +21,7 @@
    </modules>
 
    <properties>
+      <maven.deploy.skip>false</maven.deploy.skip>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <cxf.version>3.3.4</cxf.version>
       <spring.version>5.1.14.RELEASE</spring.version>
@@ -62,6 +63,11 @@
              <artifactId>maven-surefire-plugin</artifactId>
              <version>2.22.1</version>
          </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-deploy-plugin</artifactId>
+              <version>2.8.2</version>
+          </plugin>
       </plugins>
    </build>
 
