--- a/locator-service/locator-soap-service/pom.xml
+++ b/locator-service/locator-soap-service/pom.xml
@@ -79,6 +79,9 @@
                     <scanPaths>
                         <scanPath>org.talend.esb.locator.service</scanPath>
                     </scanPaths>
+                    <excludeArtifacts>
+                        <excludeArtifact>.*</excludeArtifact>
+                    </excludeArtifacts>
                 </configuration>
             </plugin>
 			 <plugin>
