--- a/sam/sam-agent/pom.xml
+++ b/sam/sam-agent/pom.xml
@@ -87,14 +87,14 @@
             <version>${cxf.version}</version>
             <scope>test</scope>
         </dependency>
-        
+
 		<dependency>
 		    <groupId>org.apache.cxf</groupId>
 		    <artifactId>cxf-rt-transports-http-jetty</artifactId>
 		    <version>${cxf.version}</version>
 		    <scope>test</scope>
 		</dependency>
-        
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -132,7 +132,7 @@
                 <groupId>org.apache.cxf</groupId>
                 <artifactId>cxf-codegen-plugin</artifactId>
                 <executions>
-                    <execution>                      
+                    <execution>
                         <id>generate-test-sources</id>
                         <phase>generate-test-sources</phase>
                         <configuration>
@@ -198,6 +198,9 @@
                     <scanPaths>
                         <scanPath>org.talend.esb.sam.agent</scanPath>
                     </scanPaths>
+                    <excludeArtifacts>
+                        <excludeArtifact>.*</excludeArtifact>
+                    </excludeArtifacts>
                 </configuration>
             </plugin>
         </plugins>
