--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
     <properties>
         <packages.version>${project.version}</packages.version>
         <cxf.version>3.3.1</cxf.version>
+        <cxf-rt-rs-service-description-swagger.tesb.version>3.3.1.tesb1</cxf-rt-rs-service-description-swagger.tesb.version>
         <camel.version>2.23.1</camel.version>
         <activemq.version>5.15.9</activemq.version>
         <spring.version>5.1.5.RELEASE</spring.version>
