--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -1486,7 +1486,7 @@
                                         value="mvn:org.apache.cxf/cxf-rt-transports-http-jetty/3.3.1.tesb1&lt;"/>
                                     <!-- patch for cxf-rt-rs-service-description-swagger (TESB-29278) -->
                                     <replacefilter
-                                            token="mvn:org.apache.cxf/cxf-rt-rs-service-description-swagger/3.3.1&lt;"
+                                            token="mvn:org.apache.cxf/cxf-rt-rs-service-description-swagger/${cxf.version}&lt;"
                                             value="mvn:org.apache.cxf/cxf-rt-rs-service-description-swagger/${cxf-rt-rs-service-description-swagger.tesb.version}&lt;"/>
                                 </replace>
                                 <replace file="target/dependencies/framework-${karaf.version}-features.xml">
