Add Nexus repository in a dedicate profile

--- a/pom.xml
+++ b/pom.xml
@@ -606,6 +606,58 @@
                 <module>examples</module>
             </modules>
         </profile>
+        <profile>
+            <id>nexus-talend</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <repositories>
+                <repository>
+                    <id>Nexus public</id>
+                    <name>Talend Open Source</name>
+                    <url>https://artifacts-oss.talend.com/nexus/content/groups/public</url>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                </repository>
+                <repository>
+                    <id>snapshots</id>
+                    <name>Talend private snapshots</name>
+                    <url>https://artifacts-zl.talend.com/nexus/content/repositories/snapshots</url>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                    <releases>
+                        <enabled>false</enabled>
+                    </releases>
+                </repository>
+                <repository>
+                    <id>releases</id>
+                    <name>Talend private releases</name>
+                    <url>https://artifacts-zl.talend.com/nexus/content/repositories/releases</url>
+                    <snapshots>
+                        <enabled>false</enabled>
+                    </snapshots>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                </repository>
+                <repository>
+                    <id>thirdparty-releases</id>
+                    <name>Thirdparty private releases</name>
+                    <url>https://artifacts-zl.talend.com/nexus/content/repositories/thirdparty-releases</url>
+                    <snapshots>
+                        <enabled>false</enabled>
+                    </snapshots>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                </repository>
+            </repositories>
+        </profile>
     </profiles>
 
 </project>
