--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,13 @@
                 <version>${cxf.xjc-utils.version}</version>
             </dependency>
 
+            <!-- Override the OpenSAML dependency for a security fix -->
+            <dependency>
+                <groupId>org.cryptacular</groupId>
+                <artifactId>cryptacular</artifactId>
+                <version>1.2.4</version>
+            </dependency>
+
             <!-- Test dependencies -->
             <dependency>
                 <groupId>junit</groupId>
