--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -122,6 +122,12 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <!-- Override the OpenSAML dependency for a security fix -->
+            <dependency>
+                <groupId>org.cryptacular</groupId>
+                <artifactId>cryptacular</artifactId>
+                <version>1.2.4</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
